frontend/src/components/CSS/App.css
:root {
  --primary-font: "Roboto";
  --primary-color: #196890;
  --hover-color: #1aa9c6;
  --footer-color: #4fb9c3;
  --theme_blue: #0589a3;
  --header-color: #74a1b7;

  /* Background */
  --back_ground: #d9f4f6;
  --background-image: url("./background.jpg");

  /* Navbar */
  --nav-back_ground: #d9f4f6;
  --nav-hover: #9fd9dd;
  --nav-text: black;

  /* Footer */
  --footer: var(--footer-color);

  /* Buttons */
  --btn-color: var(--primary-color);
  --btn-color-hover: var(--hover-color);
  --btn-text-color: white;

  /* Article List & Glossary */
  --glossary-hightlight: var(--theme_blue);
  --selecter-banner: var(--theme_blue);
  --banner: var(--primary-color);

  /* Page Elements */
  --title-text: black;
  --header-text: black;
  --header: var(--header-color);

  --text: black;
  --placeholder-text: #aaa;
  --error-message: red;

  --login-container: #f5f5f5;
  --card-color: rgba(225, 234, 243, 0.718);
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: var(--primary-color);
}

#root {
  font-family: var(--primary-font);
  margin: 0;
}

body {
  display: flex;
  flex-direction: column;
  max-height: 100vh;
  overflow: visible;
}

h1 {
  color: var(--title-text);
}

h3 {
  color: var(--header-text);
}

.list-group-item.active {
  background-color: var(--btn-color-hover);
  border-color: var(--btn-color-hover);
}

.app-container {
  background-color: var(--back_ground);
  position: relative;
  min-height: 100vh;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  overflow: auto;
}

.footer {
  text-align: center;
  background-color: var(--footer);
  padding: 1rem;
  width: 100%;
  position: absolute;
  bottom: 0;  
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

